# irv-jamaica

./: .gitignore  AUTHORS.txt  README.md  archive-data.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml
.github/workflows/: build-backend.yml  build-frontend.yml  build-pixel-driller.yml  canary-frontend.yml  canary.yml  ci-build.yml  ghcr-cleanup.yml  package-frontend.yml  package.yml  publish-storybook.yml  storybook-tests.yml
backend/: .env.example  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
backend/backend/: workers.py
backend/backend/app/: main.py  schemas.py
backend/backend/app/internal/: attribute_access.py
backend/backend/app/routers/: attributes.py  features.py
backend/backend/db/: database.py  models.py  operations.py
backend/backend/db/tests/: test_operations.py
deploy/: README.md  deploy.sh  deploy_stage.sh  provision.sh
etl/: README.md  Snakefile  config.yml  environment.yml  hazard_layers.csv  hotspot_layers.csv  network_layers.csv  network_layers_areal_protection.csv  network_tilelayers.csv  requirements.txt  road_tiles.sh  storm_layers.csv
etl/scripts/: adaptation_to_db.py  coastal_adaptation_to_db.py  damages_rp_to_db.py  extend_frontend_adaptation-options.py  (+3 more)
frontend/: .eslintrc.js  .prettierignore  Dockerfile  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
pixel_driller/: .env.example  .gitignore  Dockerfile  README.md  ingest.py  main.py  query.py  requirements.txt  test_main.http
(+600 files in other folders)
