[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.4.29"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi~=0.116",
    "fastapi-pagination~=0.13",
    "geoalchemy2~=0.18",
    "psycopg2-binary==2.9.10",
    "pydantic~=2.11",
    "uvicorn~=0.35",
]

[tool.hatch.build.targets.sdist]
include = ["/backend"]
