[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.4.29"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi-pagination~=0.13.1",
    "fastapi~=0.116.1",
    "geoalchemy2~=0.18.0",
    "psycopg2-binary==2.9.10",
    "pydantic~=2.11",
    "uvicorn~=0.35.0",
]

[tool.hatch.build.targets.sdist]
include = ["/backend"]
